[gd_scene load_steps=11 format=3 uid="uid://s8jnff8as08f"]

[ext_resource type="Script" uid="uid://dleil6x66g7gl" path="res://Scripts/UI/shop.gd" id="1_rllpi"]
[ext_resource type="Texture2D" uid="uid://bmca5sekljecn" path="res://Art/Hell/Characters/ShopKeeperHell.png" id="2_3jh66"]
[ext_resource type="PackedScene" uid="uid://o387qlahldf" path="res://Scenes/UI/stats_visual.tscn" id="2_6qnyu"]
[ext_resource type="Script" uid="uid://dwj80yu0v1qdt" path="res://Scripts/resource_scripts/stats.gd" id="3_gm4r4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hs6wh"]
bg_color = Color(0.8509804, 0.34117648, 0.3882353, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.6745098, 0.19607843, 0.19607843, 1)

[sub_resource type="Resource" id="Resource_l5jkk"]
script = ExtResource("3_gm4r4")
parent_object_name = "StatsDisplay"
metadata/_custom_type_script = "uid://dwj80yu0v1qdt"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rllpi"]
bg_color = Color(0.6745098, 0.19607843, 0.19607843, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hs6wh"]
font_size = 64
font_color = Color(0.9843137, 0.9490196, 0.21176471, 1)
shadow_color = Color(0.8745098, 0.44313726, 0.14901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jh66"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.6745098, 0.19607843, 0.19607843, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rllpi"]
font_size = 32

[node name="Shop" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 500.0
script = ExtResource("1_rllpi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hs6wh")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Top" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsDisplay" parent="PanelContainer/VBoxContainer/Top" instance=ExtResource("2_6qnyu")]
layout_mode = 0
offset_left = 313.0
offset_top = 3.0
offset_right = 467.0
offset_bottom = 229.0
stats = SubResource("Resource_l5jkk")
only_show_changed = true

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/Top"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -64.5
offset_right = 61.424255
offset_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3jh66")

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer/Top"]
custom_minimum_size = Vector2(110, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = -15.0
offset_right = 55.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rllpi")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Top/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -31.0
offset_right = 48.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Shop"
label_settings = SubResource("LabelSettings_hs6wh")
horizontal_alignment = 1

[node name="MaxPurchases" type="Label" parent="PanelContainer/VBoxContainer/Top"]
layout_mode = 0
offset_left = 12.0
offset_top = 24.0
offset_right = 90.0
offset_bottom = 37.0
text = "Max Purchases: "

[node name="Bottom" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="OptionParent" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Bottom"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Bottom"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="Rerolls" type="Control" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2/Rerolls"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 34.0
offset_top = 4.0
offset_right = 84.0
offset_bottom = 54.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3jh66")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2/Rerolls/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2/Rerolls"]
layout_mode = 0
offset_left = 88.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 55.0
text = "3"
label_settings = SubResource("LabelSettings_rllpi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discount" type="Control" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2/Discount"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 34.0
offset_top = 4.0
offset_right = 84.0
offset_bottom = 54.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3jh66")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2/Discount/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2/Discount"]
layout_mode = 0
offset_left = 88.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 55.0
text = "3"
label_settings = SubResource("LabelSettings_rllpi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="More" type="Control" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2/More"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 34.0
offset_top = 4.0
offset_right = 84.0
offset_bottom = 54.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3jh66")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2/More/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Bottom/VBoxContainer2/More"]
layout_mode = 0
offset_left = 88.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 55.0
text = "3"
label_settings = SubResource("LabelSettings_rllpi")
horizontal_alignment = 1
vertical_alignment = 1
